<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cz.meteocar.unit.ui.activity.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textColor="@color/login_second_color"
        android:textIsSelectable="false"
        android:textSize="16dp" />

    <View
        android:id="@+id/line1"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/textView"
        android:layout_marginTop="4dp"
        android:background="@color/login_second_color" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        android:singleLine="false" />

    <EditText
        android:id="@+id/pwdEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nameEditText"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/settingCheckbox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/pwdEditText"
        android:text="@string/login_settings" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/settingCheckbox"
        android:layout_marginTop="24dp"
        android:text="@string/login_ok_button_text" />

    <TextView
        android:id="@+id/login_note_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnlogin"
        android:layout_marginTop="24dp"
        android:text="@string/login_note"
        android:textSize="16dp" />

</RelativeLayout>
